# UART-Simulator

./: CMakeLists.txt  readme.md
include/: Statistics.h  UART.h  UARTFrame.h  channel.h  device.h
src/: Statistics.cpp  UART.cpp  UARTFrame.cpp  channel.cpp  device.cpp  main.cpp
